Fix Cross Site Request Forgery by adding a token at the end of the URL to publish and unpublish.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,5 @@
+Fix CSRF
+#366034 by freakalis: Added permissions to publish/unpublish own content.
 #369652 by Eikaa: Added german translation.
 
 publishcontent-6.x-1.0 release
