--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,4 @@
+#366034 by malaussene: Fixed permission with own content.
 #382280 by grndlvl, malaussene: Added publish/unpublish checkbox to node form.
 #406190 by vr_mex, malaussene: Added permissions for node type declared modules other than the node module.
 Fix CSRF
