- update "*all*" to match drupal convention "any" - added "any" to individual node_type permissions - added install file w/ hook_update - updated translations

--- a/translations/de.po
+++ b/translations/de.po
@@ -52,12 +52,12 @@ msgid "Display a link to publish the node."
 msgstr "Zeige einen Link zum Veröffentlichen der Node"
 
 #: publishcontent.module:67
-msgid "  publish *all* content"
-msgstr "  veröffentliche *alle* Inhalte"
+msgid "publish any content"
+msgstr "veröffentliche von Inhalte"
 
 #: publishcontent.module:68
-msgid "unpublish *all* content"
-msgstr "  verstecke *alle* Inhalte"
+msgid "unpublish any content"
+msgstr "verstecke von Inhalte"
 
 #: publishcontent.module:72
 msgid "node"
